style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap');

*, *::after, *::before {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

@font-face {
    font-family: main-font;
    src: url("iasad/Assets/font.woff");
}

:root {
    --light-black: #383838;
    --pure-black: #000;
    --white: #fdfdfd;
    --green: #689F88;
}

::-webkit-scrollbar-thumb {
    background: #C4C4C4;
    border: 0;
    border-radius: 0px;
}

::-webkit-scrollbar {
    width: 7px;
    height: 7px;
}

html {
    scroll-behavior: smooth;
    scroll-padding: 1.5rem;
}

body {
    height: 2000px;
    font-family: "Montserrat", "Helvetica", Arial, sans-serif;
    font-weight: normal;
    font-size: 18px;
    color: #F1F1F1;
    background-color: black;
    /* background-image: url(https://cdn.monstercat.com/background-tile.webp); */
    background-repeat: repeat;
    background-attachment: scroll;
    overflow-x: hidden;
    margin: 0;
}

/* Styles for the loader */
.loader {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 9999999999999;
}

.loader-text {
    animation: loadingAnim 1s linear 0s infinite normal forwards;
    color: #fff;
    font-size: 24px;
}

@keyframes loadingAnim {
    0% {
		transform: translate(0);
	}

	20% {
		transform: translate(-2px, 2px);
	}

	40% {
		transform: translate(-2px, -2px);
	}

	60% {
		transform: translate(2px, 2px);
	}

	80% {
		transform: translate(2px, -2px);
	}

	100% {
		transform: translate(0);
	}
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    background: transparent;
    z-index: 9999999;
}

nav {
    width: 94%;
    margin: 0 auto;
    height: 100%;
    display: flex;
    justify-content: space-between;
    padding: 1.4rem 1.8rem;
    align-items: center;
    background: transparent;
}

nav img {
    width: 50px;
    height: 50px;
}

.hamburger i {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.5rem;
    color: var(--white);
    cursor: pointer;
}

.sidebar {
    position: absolute;
    width: 420px;
    background-color: #000;
    height: 100vh;
    right: 0;
    top: 0;
    z-index: 10000;
    padding: 2rem;
    transform: translateX(160%);
    transition: all ease .3s;
}

.sidebar.open {
    transform: translateX(0%);
}

.sidebar-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.sidebar-header i {
    font-size: 30px;
    cursor: pointer;
}

.sidebar-scroll {
    height: 500px;
    overflow: scroll;
    margin-top: 2rem;

}

.sidebar-scroll ul li .title {
    text-decoration: none;
    list-style: none;
    font-family: main-font;
    text-transform: uppercase;
    font-size: 1.1rem;
    padding: .75rem 0;
    display: flex;
    align-items: center;
    cursor: pointer;
}

.dropdown-content {
    margin-left: 1rem;
}

.dropdown {
    display: none;
    transform: translateY(-100%);
    transition: all .6s ease-in-out;
}

.dropdown.drop-open {
    display: flex;
    transform: translateY(0%);

}

.dropdown-content li {
    text-decoration: none;
    list-style: none;
    font-family: main-font;
    text-transform: uppercase;
    font-size: .9rem;
    padding: .75rem 0;
    display: flex;
    color: rgb(196, 196, 196);
    align-items: center;
    cursor: pointer;
    transition: color .2s ease;
}

.dropdown-content li:hover {
    color: var(--white)
}

li .title i.close {
    display: none;
}

.sidebar-scroll ul li i {
    font-size: 1.9rem;
}

.sidebar-btns {
    font-family: main-font;
    margin-top: 1.7rem;
    text-transform: uppercase;
}

.sidebar-btns a {
    text-decoration: none;
    color: var(--white);
    padding: .35rem .95rem;
    font-size: .85rem;


}

.sidebar-btns .sidebar-sign-in {
    background-color: transparent;
    font-family: main-font;
    font-size: .85rem;
    border: 1px solid white;
    color: var(--white);
    outline: none;
    text-transform: uppercase;
    padding: .35rem .95rem;
    transition: all .5s ease;
    cursor: pointer;

}

.sidebar-btns .sidebar-sign-in:hover {
    background-color: white;
    color: var(--pure-black);


}

.bg-img {
    z-index: -999;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    object-fit: cover;
    transform: scale(1.5);
    background-position: center;
    filter: blur(4px) brightness(38%);
}

.sidebar-social-icons {
    display: flex;
    align-items: center;
    gap: 18px;
    margin-top: 2rem;
}

.sidebar-social-icons a {
    text-decoration: none;
    color: var(--white);
    font-size: 20px;
}

.sidebar-social-icons a img {
    width: 20px;
}

.bg-img:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, .75));
}

.fixed-social-icons {
    position: absolute;
    top: 115px;
    right: 76px;
    display: flex;
    flex-direction: column;
    gap: 18px;
}

.fixed-social-icons a {
    text-decoration: none;
    color: var(--white);
    font-size: 20px;
}

.fixed-social-icons a img {
    width: 20px;
}

.sections-wrapper {
    max-width: 1200px;
    height: 100%;
    /* border: 1px solid green; */
    margin: 0 auto;
    padding-top: 3rem;
}

.section {
    padding: 5rem 0 0 0;
    width: 95%;
    margin: 0 auto;
}

.hero-section {
    padding-top: 9rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;

}

.left-section {
    width: 45%;
    height: 100%;
    display: flex;
    justify-content: center;
}

.left-section img {
    width: 100%;

}

.rotated-text {
    font-size: 1.2rem;
    font-weight: 100;
    writing-mode: vertical-lr;
    transform: rotate(180deg);
    font-style: italic;
    font-family: sans-serif;
}

.rotated-text span {
    color: var(--green);
}
/* ... */

